2004-09-28  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	Allow LISTPARAMs to omit the length argument. When
	generating C code, a LOCALPARAM is automatically
	generated for the length if the length argument is
	omitted.

2004-08-13  Jamey Sharp  <jamey@minilop.net>

	* configure.ac:
	* src/Makefile.am:
	* src/.cvsignore:
	* src/check_all.c:
	* src/check_suites.h:
	* src/check_public.c:
	Add the first unit tests for XCB. This adds a build
	dependency on 'check'; I hope somebody will make it
	more of a build recommendation.

2004-08-13  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_conn.c:
	Add a sanity check: assert() that _xcb_conn_wait
	will not be re-entered within the same thread. This
	turns out not to be true in some current buggy code.
	Xlib re-enters from _XAsyncReplyHandler in
	src/xcl/display.c; and the X Test Suite seems to
	catch SIGABRT and continue running.

2004-08-10  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_out.c:
	I misread the BIG-REQUESTS specification. The long
	length field needs to count itself too.

2004-07-24  Jamey Sharp  <jamey@minilop.net>

	* src/client-c.xcb:
	Renamed functions that return new iterators to
	*Iter, to avoid conflict with similar functions that
	return arrays.

	Deprecating ARRAYFIELD in favor of LISTFIELD, which
	now generates both array and iterator accessors. You
	get an array accessor as long as the element type is
	fixed length; you get an interator accessor as long
	as the base type has an iterator. You always get a
	'Length' function.

2004-07-24  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_auth.c:
	Bart cleaned up some code that I made ugly, and
	I'm fixing a warning that resulted from a static
	function being created but not necessarily used.

2004-07-07  Jamey Sharp  <jamey@minilop.net>

	* src/xcb_xid.c:
	OK, it might be a good idea to commit something
	that compiles. I thought I'd tested this change...

2004-07-06  Jamey Sharp  <jamey@minilop.net>

	* src/xcbint.h:
	* src/xcb_xid.c: