@@ -185,6 +185,8 @@ int _xcb_conn_wait(XCBConnection *c, const int should_write, pthread_cond_t *con
     assert(!already_here);
     ++already_here;
 
+    _xcb_assert_valid_sequence(c);
+
     /* If the thing I should be doing is already being done, wait for it. */
     if(should_write ? c->out.writing : c->in.reading)
     {
